Update README.md to include reference to feature/santas
